<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_profile"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profilePhoto"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        app:srcCompat="@drawable/default_photo" />

    <Button
        android:id="@+id/profileAddPhotoBtn"
        style="@style/ButtonYellowTheme"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/small_btn_height"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/profile_add_photo_btn"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoto" />

    <TextView
        android:id="@+id/profileNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profile_name_title"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/profile_name"
        app:layout_constraintTop_toBottomOf="@+id/profileAddPhotoBtn" />

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="@dimen/edit_field_login_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/frame_black_background_white"
        android:hint="@string/profile_hint_name"
        android:inputType="text"
        android:maxLength="25"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileNameTitle"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/profileSurnameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/profile_surname_title"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/profileSurname"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <EditText
        android:id="@+id/profileSurname"
        android:layout_width="@dimen/edit_field_login_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/frame_black_background_white"
        android:hint="@string/profile_hint_surname"
        android:inputType="text"
        android:maxLength="25"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileSurnameTitle"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/profileSaveBtn"
        style="@style/ButtonGreenTheme"
        android:layout_width="@dimen/big_btn_width"
        android:layout_height="@dimen/big_btn_height"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/profile_save_btn"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileSurname" />


</androidx.constraintlayout.widget.ConstraintLayout>