<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <EditText
        android:id="@+id/login_user_name"
        android:layout_width="@dimen/edit_field_login_width"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_black_background_white"
        android:hint="@string/login_username_hint"
        android:inputType="text"
        android:maxLength="17"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="@dimen/edit_field_login_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/frame_black_background_white"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:maxLength="17"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_user_name"
        tools:ignore="Autofill" />


    <Button
        android:id="@+id/login_btn"
        style="@style/ButtonGreenTheme"
        android:layout_width="@dimen/big_btn_width"
        android:layout_height="@dimen/big_btn_height"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/sing_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/login_register_text"
        android:textColor="@drawable/link_selector"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

</androidx.constraintlayout.widget.ConstraintLayout>