<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_profile">

    <EditText
        android:id="@+id/registerLogin"
        android:layout_width="@dimen/edit_field_login_width"
        android:layout_height="wrap_content"
        android:background="@drawable/frame_black_background_white"
        android:hint="@string/login_username_hint"
        android:inputType="text"
        android:maxLength="17"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/register_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="@dimen/edit_field_login_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/frame_black_background_white"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:maxLength="17"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerLogin"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/registerPasswordRepeat"
        android:layout_width="@dimen/edit_field_login_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/frame_black_background_white"
        android:hint="@string/login_password_repeat_hint"
        android:inputType="textPassword"
        android:maxLength="17"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerPassword"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/registerBtn"
        style="@style/ButtonGreenTheme"
        android:layout_width="@dimen/big_btn_width"
        android:layout_height="@dimen/big_btn_height"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/login_register_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordRepeat" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/register_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.47" />

</androidx.constraintlayout.widget.ConstraintLayout>